[gd_scene load_steps=2 format=3 uid="uid://8q4e8mbj1j1"]

[ext_resource type="Script" uid="uid://clum4pr3ixomq" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n87rw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -96.5
offset_right = 106.5
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="RestartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="LevelSelectButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Return to Level Select"

[connection signal="pressed" from="Control/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
